# agentive-inventory

./: .env.example  .gitignore  README.md  docker-compose.yml  environment.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  approvals.py  backtest.py  catalog.py  configs.py  data.py  forecasts.py  health.py  procure.py
backend/app/core/: __init__.py  config.py  observability.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  forecasting_service.py  inventory_service.py  io_utils.py  llm_service.py  procurement_service.py  validation_service.py
backend/tests/: test_admin_endpoints.py  test_auth_and_rate.py  test_backtest_api.py  test_batch_procure_api.py  test_catalog_api.py  test_data_validate_api.py  test_forecast_api.py  test_forecasting.py  test_procure_api.py  test_procurement.py
configs/: settings.yaml  thresholds.yaml
data/: calendar.parquet  sample_submission.parquet  sell_prices.parquet
frontend/: Dockerfile  app.py  requirements.txt
frontend/pages/: 1_Dashboard.py  2_Forecasts.py  3_Recommendations.py  4_Settings.py  5_Backtest.py  6_Audit_Log.py
frontend/utils/: __init__.py  api.py
infra/: docker-compose.yml  render.yaml
infra/k8s/: README.md
orchestration/: README.md
orchestration/n8n_workflows/: example_workflow.json
