# pyproject.toml

[tool.poetry]
name = "agentive-inventory"
version = "0.1.0"
description = "Multi-agent inventory management system using FastAPI, Streamlit and M5 dataset"
authors = ["Acme Corp <info@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27"}
pydantic = "^2.0"
pandas = "^2.1"
numpy = "^1.25"
prophet = "^1.1.5" # optional: used for advanced forecasting; may need extra dependencies
xgboost = "^2.0"
scikit-learn = "^1.3"
sqlmodel = "^0.0.8" # optional database layer
google-genai = "^0.3"
streamlit = "^1.26"
requests = "^2.31"
pyyaml = "^6.0"
altair = "^5.0"
prometheus-client = "^0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.6"
mypy = "^1.4"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
disallow_untyped_defs = true
namespace_packages = true
exclude = "(^|/)backend/tests/"

[[tool.mypy.overrides]]
module = [
    "joblib",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "prophet",
    "prophet.*",
    "prometheus_client",
    "yaml",
    "yaml.*",
    "xgboost",
    "xgboost.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
